Changed index->article class to "column lg-6 mt-2"

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>La tour Eiffel</p>
       </article>
 
-      <article class="col-sm-6 mt-4">
+      <article class="col-lg-6 mt-2">
       <h3>La tour Eiffel</h3>
           <p class="bodytext">Venez découvrir la tour Eiffel dans un voyage ascensionnel unique au monde,
             où les émotions vous emportent. Du parvis au sommet, vous découvrirez des
